--- a/src/styles/components/_sider.scss
+++ b/src/styles/components/_sider.scss
@@ -40,10 +40,10 @@
   }
 
   @include md {
-    flex: 0 0 80px !important;
-    max-width: 80px !important;
-    min-width: 80px !important;
-    width: 80px !important;
+    flex: 0 0 64px !important;
+    max-width: 64px !important;
+    min-width: 64px !important;
+    width: 64px !important;
 
     img {
       display: block;
