--- a/src/styles/pages/_main-page.scss
+++ b/src/styles/pages/_main-page.scss
@@ -3,6 +3,7 @@
   min-height: 100vh;
   background-size: cover;
   background-position: center;
+  width: 100vw;
 }
 
 .content-layout {
